<resources>
    <string name="app_name">Calculassion</string>
    <string name="Play">Jouer</string>
    <string name="scores">Scores</string>
    <string name="_0">0</string>
    <string name="minus">- / +</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="equals">=</string>
    <string name="delete">Annuler</string>
    <string name="valider">Valider</string>
    <string name="a_propos">A propos</string>
    <string name="meilleurs_joueurs">Meilleurs joueurs</string>
    <string name="toolBarScores">Scores :</string>
    <string name="toolBarFinish">Terminer</string>
    <string name="cette_application_a_t_r_alis_par_axel_goret_et_benjamin_hebert_l_application_est_disponible_en_francais_et_en_tch_que">Cette application a été réalisé par Axel GORET et Benjamin HEBERT. L\'application est disponible en Francais et en Tchèque. Nous avons ajouté un petit clignotement pour indiquer si la réponse est bonne ou non.</string>
    <string name="nbGoodAnswer">\0 bonne réponse \</string>
    <string name="nbGoodAnswer3">\ bonne réponse \</string>
    <string name="nbGoodAnswer2">\ bonnes réponses \</string>
</resources>