<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.Jeu">

    <LinearLayout
        android:id="@+id/layoutBackground"
        android:layout_width="360dp"
        android:layout_height="660dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Pseudo"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textViewExercice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/textViewResultat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="80sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonValidate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:text="@string/valider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonNum1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_1" />

                    <Button
                        android:id="@+id/buttonNum2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_2" />

                    <Button
                        android:id="@+id/buttonNum3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonNum4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_4" />

                    <Button
                        android:id="@+id/buttonNum5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_5" />

                    <Button
                        android:id="@+id/buttonNum6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonNum7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_7" />

                    <Button
                        android:id="@+id/buttonNum8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_8" />

                    <Button
                        android:id="@+id/buttonNum9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_9" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonMinus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/minus" />

                    <Button
                        android:id="@+id/buttonNum0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/_0" />

                    <Button
                        android:id="@+id/buttonDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5px"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/delete" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>